data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4317.wast
;; 6. **Br_if with Mismatched Signature**:    - Incorporate `call_indirect` within a br_if conditional branch.    - Use a valid index but a mismatched signature.    - Confirm if the conditional branch evaluation in the context of a signature mismatch affects trapping behavior differently.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $br_if_with_mismatched_signature
      (local i32)
      (br_if 0 (call_indirect (type 0) (i32.const 0) (i32.const 0)))
    )
  )
  "type mismatch"
)